kubernetes/my-env.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-app-pod 
  labels: 
    app: myapp
spec: 
   containers: 
      - name: nginx-container 
        image: nginx
