kubernetes/my-pod-cmd-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: webapp-green
    image: kodekloud/webapp-color
    args: ["--color", "green"]
