kubernetes/my-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-app-pod 
  labels: 
    app: myapp 
    type: front-end 
spec: 
   containers: 
      - name: nginx-container 
        image: nginx 

# k run my-app-pod --image=nginx
