kubernetes/my-resourseReq.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: my-app-pod 
  labels: 
    app: myapp 
    type: front-end 
spec: 
   containers: 
      - name: nginx-container 
        image: nginx
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "2"
            memory: "2Gi"
