kubernetes/my-service-account.yaml
# k create sa dashboard-sa
#  k create tocken dashboard-sa
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd-frontend
  name: httpd-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd-frontend
  template:
    metadata:
      labels:
        app: httpd-frontend
    spec:
      serviceAccountName: dashboard-sa
      automountServiceAccountToken: false
      containers:
      - image: httpd:2.4-alpine
        name: httpd
