kubernetes/my-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: my-service 
spec: 
   type: NodePort 
   ports: 
      - targetPort: 80 
        port: 80 
        nodePort: 30002 
   selector: 
      app: myapp 
      type: frontend  


# apiVersion: v1 
# kind: Service 
# metadata: 
#   name: back-end
# spec: 
#    type: ClusterIP 
#    ports: 
#       - targetPort: 80 
#         port: 80  
#    selector: 
#       app: myapp 
#       type: backend

#  kubectl expose pod redis --port=6379 --name redis-service --dry-run=client -o yaml
#  kubectl expose pod nginx --port=80 --name nginx-service --type=NodePort --dry-run=client -o yaml
