kubernetes/my-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-rule
spec:
  podSelector:
    matchLabels:
      roll: db
  ingress:
  - from:
     - podSelector:
        matchLabels:
          name: db-api
       namespaceSelector:
        matchLabels:
          project: prod
     - ipBlock:
         cidr: 192.168.5.10/32
    ports:
      - protocol: TCP 
        port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
      - protocol: TCP
        port: 80 
  policyTypes:
  - Ingress
  - Egress


# here spec.podSelector is slecting the DB pod to with the policy should apply to
# ingress.from.podSelector is selecting api pod which should be allowed to talk to the db pod
# selcted in the above step
